<resources>
    <string name="app_name">Diabetic</string>

    <string name="titleApp">Diabetic Retinopathy\nDetection</string>

    <string name="createByLbl">By:\nAiDiTech Universitas Ma Chung\nYohanes Vianney Dani</string>
    <string name="imageLogoCredit">Application Logo</string>

    <string name="guideTitleLbl">GUIDE APLICATION\n(Panduan Aplikasi)</string>
    <string name="guideEnglish">1. Read the entire guide first.\n
                                2. Inside, there are two features: “SELECT IMAGE” and “CAPTURE IMAGE.”\n
                                3. Select “SELECT IMAGE” to enter the “Gallery” view, then choose the image you want to detect.\n
                                4. Select “CAPTURE IMAGE” to take a picture directly using your phone’s camera.\n
                                5. Make sure the image you want to detect is displayed on the main menu screen.\n
                                6. Next, press the “PREDICT” button to display the detection results.\n
                                7. The detection results will be displayed successfully.\n
                                For more details, you can refer to the link below:</string>
    <string name="linkGuideEnglish">Click for Tutorial video on YouTube</string>
    <string name="guideIndonesia">1. Baca seluruh panduan terlebih dahulu\n
                                2. Dibagian dalam terdapat dua fitur yaitu "SELECT IMAGE" dan "CAPTURE IMAGE"\n
                                3. Pilih "SELECT IMAGE" untuk masuk ke tampilan "Gallery" lalu pilih citra yang ingin di deteksi\n
                                4. Pilih "CAPTURE IMAGE" untuk mengambil citra secara langsung menggunakan kamera handphone\n
                                5. Pastikan citra yang ingin dideteksi sudah tampil pada layar menu utama\n
                                6. Selanjutnya silahkan tekan tombol "PREDICT" untuk menampilkan hasil deteksi\n
                                7. Hasil deteksi berhasil ditampilkan\n
                                Untuk lebih lengkap dapat dilihat pada link berikut:</string>
    <string name="linkGuideIndonesia">GKlik untuk tutorial video di YouTube</string>
    <string name="guideToMainLbl">Click if You Understand to Next Page!</string>

    <string name="selectBtnLbl">Select Image</string>
    <string name="captureBtnLbl">Capture Image</string>
    <string name="predictBtnLbl">Predict</string>
    <string name="resultLbl">Result : </string>
</resources>