<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/titleApp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_below="@id/titleMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageLogoCredit"
        />

    <Button
        android:id="@+id/selectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectBtnLbl"
        android:textSize="16sp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/captureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captureBtnLbl"
        android:textSize="16sp"
        android:layout_below="@id/selectBtn"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/predictBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predictBtnLbl"
        android:textSize="16sp"
        android:layout_below="@id/captureBtn"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/resultLbl"
        android:textSize="16sp"
        android:layout_below="@id/predictBtn"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text=""
        android:textSize="16sp"
        android:layout_below="@id/resultLabel"
        android:textAlignment="center"
        />

</RelativeLayout>