<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideActivity">

    <TextView
        android:id="@+id/titleGuide"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/guideTitleLbl"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/guideLabelEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleGuide"
        android:text="@string/guideEnglish"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/youtubeLinkEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guideLabelEnglish"
        android:text="@string/linkGuideEnglish"
        android:textSize="16sp"
        android:textColor="#1E88E5"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/guideLabelIndonesia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/youtubeLinkEnglish"
        android:text="@string/guideIndonesia"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/youtubeLinkIndonesia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guideLabelIndonesia"
        android:text="@string/linkGuideIndonesia"
        android:textSize="16sp"
        android:textColor="#1E88E5"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/clickToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/youtubeLinkIndonesia"
        android:text="@string/guideToMainLbl"
        android:textStyle="bold"
        android:textColor="#d1c149"
        android:textSize="24sp"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_marginTop="25dp"
        android:textAlignment="center" />
</RelativeLayout>