<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditActivity">

    <TextView
        android:id="@+id/titleCredit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/titleApp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageLogoCredit"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/titleCredit"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/image_app_round"
        android:contentDescription="@string/imageLogoCredit"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/createByLabel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/imageLogoCredit"
        android:text="@string/createByLbl"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textAlignment="center" />
</RelativeLayout>